--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,13 @@
 </div>
     </header>
 
-    <section class="hero">
+<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="assets/css/dashboard.css">
+<link rel="stylesheet" href="assets/css/console.css">
+<link rel="stylesheet" href="assets/css/animations.css">
+<link rel="stylesheet" href="assets/css/responsive.css">
+
+<section class="hero">
         <div class="hero-background"></div>
         <div class="hero-content">
             <h1>Intelligent Automation Redefined</h1>
