--- a/demo/index.html
+++ b/demo/index.html
@@ -1,12 +1,6 @@
 </div>
     </header>
 
-<link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/dashboard.css">
-<link rel="stylesheet" href="assets/css/console.css">
-<link rel="stylesheet" href="assets/css/animations.css">
-<link rel="stylesheet" href="assets/css/responsive.css">
-
 <section class="hero">
         <div class="hero-background"></div>
         <div class="hero-content">
@@ -653,6 +647,12 @@
             showToast('warning', 'Pattern Detected', 'Repetitive task detected - consider automating');
         }, 8000);
     </script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/tabs.js"></script>
+    <script src="assets/js/console.js"></script>
+    <script src="assets/js/toast.js"></script>
+    <script src="assets/js/charts.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 </html><!DOCTYPE html>
 <html lang="en">
@@ -664,6 +664,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Fira+Code&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/dashboard.css">
+    <link rel="stylesheet" href="assets/css/console.css">
+    <link rel="stylesheet" href="assets/css/animations.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <style>
         :root {
             --primary: #6C63FF;
